<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTagActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/TempleTagTheme"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Create a new Tag"
        app:titleTextColor="@color/white">
    </androidx.appcompat.widget.Toolbar>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/tagLocationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="monospace"
        android:hint="@string/tag_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextColor="@color/white"
        app:met_textColor="@color/white"
        app:met_textColorHint="@color/white"
        app:met_primaryColor="@color/white"
        app:met_underlineColor="@color/white" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/tagDescription"
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="monospace"
        android:hint="@string/tag_description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagLocationName"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextColor="@color/white"
        app:met_textColorHint="@color/white"
        app:met_primaryColor="@color/white"
        app:met_textColor="@color/white"
        app:met_underlineColor="@color/white"
        android:layout_height="100dp" />

    <ImageView
        android:id="@+id/tagImage"
        android:layout_width="277dp"
        android:layout_height="167dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="67dp"
        android:background="@android:drawable/dialog_holo_dark_frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagDescription"
        app:srcCompat="@android:drawable/ic_menu_report_image" />

    <ImageButton
        android:id="@+id/takeTagPictureBtn"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="129dp"
        android:fontFamily="monospace"
        android:padding="10dp"
        android:src="@drawable/ic_action_take_photo"
        android:theme="@style/AppTheme.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagImage" />

    <TextView
        android:id="@+id/expiration_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="monospace"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takeTagPictureBtn" />

    <Button
        android:id="@+id/createTagBtn"
        android:layout_width="258dp"
        android:layout_height="60dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="77dp"
        android:fontFamily="monospace"
        android:padding="10dp"
        android:text="@string/create_tag"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:theme="@style/AppTheme.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takeTagPictureBtn" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>