<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="#000000">

    <ImageButton
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/img_templetag"
        android:layout_above="@+id/loginLayout"
        android:layout_centerInParent="true"
        android:layout_marginBottom="90dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:id="@+id/loginLayout">

        <TextView
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="monospace"
            android:text="@string/welcome_to_templetag"
            android:gravity="center"
            android:textSize="29sp"
            android:textStyle="bold"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:met_textColorHint="@color/white"
            app:met_floatingLabelTextColor="@color/white"
            app:met_underlineColor="@color/TempleTagTheme"
            app:met_baseColor="@color/white"
            android:fontFamily="monospace"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            app:met_floatingLabel="highlight" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="monospace"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            app:met_textColorHint="@color/white"
            app:met_floatingLabelTextColor="@color/white"
            app:met_baseColor="@color/white"
            app:met_underlineColor="@color/TempleTagTheme"
            app:met_floatingLabel="highlight" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:theme="@style/AppTheme.Button"
            android:fontFamily="monospace"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/signUpText"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/no_account"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:theme="@style/AppTheme.Button"
            android:fontFamily="monospace"
            android:padding="10dp"
            android:text="@string/sign_up_btn"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>