<resources>
    <string name="app_name">TempleTag</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_draft">Settings</string>

    <!--Personal Information Preferences-->
    <string name="email">email_pref</string>
    <string name="password">password_change_pref</string>
    <string name="no_account">No Account?</string>
    <string name="login">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="welcome_to_templetag">Welcome to TempleTag</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="title_activity_create_tag">Create Tag</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tag_name">Tag Location Name</string>
    <string name="tag_description">Tag Description...</string>
    <string name="take_tag_picture">Take Tag Picture</string>
    <string name="create_tag">Create Tag</string>
    <string name="logo_uri">https://firebasestorage.googleapis.com/v0/b/templetag-8fe75.appspot.com/o/905px-Temple_T_logo.png?alt=media&amp;token=3e08226c-7abe-4679-b69d-226916489e76</string>
</resources>
